[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/explore-editor-theme/ui/IconSaver.gd" type="Script" id=1]

[node name="IconSaver" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="."]
margin_right = 73.0
margin_bottom = 20.0
text = "Save Icon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_top = 24.0
margin_right = 73.0
margin_bottom = 38.0

[node name="SaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 80.0
margin_right = 610.0
margin_bottom = 530.0
rect_min_size = Vector2( 650, 450 )
filters = PoolStringArray( "*.png ; PNG Image" )

[connection signal="pressed" from="SaveButton" to="." method="show_save_dialog"]
[connection signal="file_selected" from="SaveDialog" to="." method="save_file"]
